--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
     background-color: rgba(0, 0, 0, 0.8);
     border-radius: 15px;
     padding: 15px;
@@ -26,7 +26,7 @@
     height: 30px;
     font-size: 25px;
     color: black;
-    text-align: right;
+    text-align: right !important;
     padding: 5px;
     margin: 5px;
 }
@@ -58,7 +58,7 @@
     background: rgb(38, 41, 41);
     color: white;
     border-radius: 6px;
-    border-color: aliceblue; 
+    border-color: aliceblue;
     font-size: 25px;
     padding: 20px;
     margin: 3px;
